<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGradesActivity">

    <ImageView
        android:id="@+id/backgroundVector"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_gradient"
        android:src="@drawable/home_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="392dp"
        android:layout_height="256dp"
        android:contentDescription="@string/lost_of_stars"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubjectFour"
        app:srcCompat="@drawable/ic_stars" />

    <TextView
        android:id="@+id/addGradesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/add_your_grades"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/booksVector"
        android:layout_width="250dp"
        android:layout_height="132dp"
        android:layout_marginBottom="568dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/three_floating_books"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_books" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="#D3B78727"
        android:onClick="saveClicked"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textSubjectNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="48dp"
        android:text="@string/subject_name"
        android:textSize="20sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addGradesTitle" />

    <TextView
        android:id="@+id/textSubjectGradeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/title_grade"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/textGradeOne"
        app:layout_constraintTop_toBottomOf="@+id/addGradesTitle" />

    <EditText
        android:id="@+id/textSubjectOne"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="443dp"
        android:background="#7CB78727"
        android:ems="10"
        android:hint="@string/subject_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/textGradeOne"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubjectNameTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/textGradeOne"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="384dp"
        android:background="#7CB78727"
        android:ems="10"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubjectGradeTitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/textSubjectTwo"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="384dp"
        android:background="#7CB78727"
        android:ems="10"
        android:hint="@string/subject_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/textGradeOne"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubjectOne"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:text="@string/defaultGrade_0"
        android:id="@+id/textGradeTwo"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="384dp"
        android:background="#7CB78727"
        android:ems="10"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGradeOne"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/textSubjectThree"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="384dp"
        android:background="#7CB78727"
        android:ems="10"
        android:hint="@string/subject_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/textGradeOne"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubjectTwo"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/textGradeThree"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="384dp"
        android:background="#7CB78727"
        android:ems="10"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGradeTwo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/textSubjectFour"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="263dp"
        android:background="#7CB78727"
        android:ems="10"
        android:hint="@string/subject_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/textGradeOne"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubjectThree"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/textGradeFour"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="384dp"
        android:background="#7CB78727"
        android:ems="10"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGradeThree"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>